# src/controllers/index.ts
@@ -5,6 +5,7 @@ export * from "./subscription.controller";
 export * from "./payments.controller";
 export * from "./checkin.controller";
 export * from "./trainer.controller";
+export * from "./class-booking.controller";
 export * from "./reports.controller";
 export * from "./logs.controller";
 export * from "./member-dashboard.controller";
